# tim

./: .gitignore  Cargo.toml  README.md  Untitled.drawio  setup.sh
textual-geometry/: Cargo.toml
textual-geometry/input_sequences/: long.txt  test1.txt
textual-geometry/src/: encoder.rs  lib.rs  main.rs
textual-geometry/src/geometry/: dbl.rs  geometry.rs  mod.rs  nhedron_geometry.rs  spiral_geometry.rs
textual-geometry/src/rendering/: bitmap.rs  mod.rs  svg.rs
texual-geometry/: Cargo.toml
texual-geometry/src/: artist.rs  geometry.rs  lib.rs  main.rs
texual-geometry/src/nhedron/: artist.rs  encoder.rs  geometry.rs  mod.rs
texual-geometry/src/spiral/: artist.rs  bitmap.rs  encoder.rs  geometry.rs  mod.rs
ximp/: Cargo.toml  README.md
ximp/src/: http_svc.rs  main.rs  tcp_prox.rs
