[package]
name = "ximp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
getopts = "0.2.21"
tokio = { version = "1.35.1", features = ["full"] }
textual-geometry = { path = "../textual-geometry" }
axum = { version = "0.7.2", features = ["macros"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
